# nerjav

./: .gitignore  db.sqlite3  pyproject.toml
core/: admin.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_blogpost_slide_testimonial.py  0003_productvariantattribute_and_more.py  0004_orderrequest.py  0005_remove_product_brand_remove_product_model_and_more.py  0006_alter_product_characteristics_and_more.py
core/templates/core/: index.html  privacy_policy.html  product_detail.html  subcategory_detail.html
myproject/: settings.py  urls.py
static/catalog/view/javascript/: common.js
static/catalog/view/javascript/jquery/swiper/css/: opencart.css
static/catalog/view/javascript/webdigify/: custom.js  megamenu.js
static/catalog/view/theme/Mydecor/stylesheet/: stylesheet.css
static/catalog/view/theme/Mydecor/stylesheet/webdigify/: bootstrap.min.css  carousel.css  category-list.css  custom.css  megamenu.css  newsletter.css
